First commited as before_57366_rev1